--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "colorthief": "^2.4.0",
+    "html-to-image": "^1.11.11",
+    "mui-color-input": "^2.0.1",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
+    "react-color-palette": "^7.1.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
